--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
+    "firebase": "^10.12.2",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
