--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "jsx": "preserve",
     "incremental": true,
     "noImplicitAny": true,
-    "types": ["@types/node", "@types/jest", "@types/testing-library__jest-dom"],
+    "types": ["@types/node"],
 
     "plugins": [
       {
