--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "dependencies": {
     "firebase": "^10.12.2",
-    "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18"
+    "next": "^15.0.0-rc.0",
+    "react": "^19.0.0-rc-58af67a8f8-20240628",
+    "react-dom": "^19.0.0-rc-58af67a8f8-20240628"
   },
   "devDependencies": {
     "@testing-library/react": "^15.0.7",
@@ -23,7 +23,7 @@
     "@types/react-dom": "^18",
     "dotenv": "^16.4.5",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3",
+    "eslint-config-next": "^15.0.0-rc.0",
     "jest": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.3",
